; ModuleID = '/home/carl/AnghaBench/lab/engine/code/bspc/extr_map_q1.c_Q1_CreateMapBrushes.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/bspc/extr_map_q1.c_Q1_CreateMapBrushes.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { %struct.TYPE_10__* }

@nobrushmerge = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [35 x i8] c"converting brushes to map brushes\0A\00", align 1
@.str.1 = private unnamed_addr constant [12 x i8] c"%5d brushes\00", align 1
@.str.2 = private unnamed_addr constant [5 x i8] c"\0D%5d\00", align 1
@.str.3 = private unnamed_addr constant [2 x i8] c"\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @Q1_CreateMapBrushes(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_10__*, align 8
  %6 = alloca %struct.TYPE_10__*, align 8
  %7 = alloca %struct.TYPE_10__*, align 8
  %8 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %9 = load i32, i32* %4, align 4
  %10 = call %struct.TYPE_10__* @Q1_CreateBrushesFromBSP(i32 %9)
  store %struct.TYPE_10__* %10, %struct.TYPE_10__** %5, align 8
  %11 = load %struct.TYPE_10__*, %struct.TYPE_10__** %5, align 8
  %12 = load i32, i32* %4, align 4
  %13 = call %struct.TYPE_10__* @Q1_TextureBrushes(%struct.TYPE_10__* %11, i32 %12)
  store %struct.TYPE_10__* %13, %struct.TYPE_10__** %5, align 8
  %14 = load %struct.TYPE_10__*, %struct.TYPE_10__** %5, align 8
  %15 = call i32 @Q1_FixContentsTextures(%struct.TYPE_10__* %14)
  %16 = load i32, i32* @nobrushmerge, align 4
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %22, label %18

18:                                               ; preds = %2
  %19 = load %struct.TYPE_10__*, %struct.TYPE_10__** %5, align 8
  %20 = load i32, i32* %4, align 4
  %21 = call %struct.TYPE_10__* @Q1_MergeBrushes(%struct.TYPE_10__* %19, i32 %20)
  store %struct.TYPE_10__* %21, %struct.TYPE_10__** %5, align 8
  br label %22

22:                                               ; preds = %18, %2
  %23 = load i32, i32* %4, align 4
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %27, label %25

25:                                               ; preds = %22
  %26 = call i32 (i8*, ...) @qprintf(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0))
  br label %27

27:                                               ; preds = %25, %22
  %28 = load i32, i32* %4, align 4
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %32, label %30

30:                                               ; preds = %27
  store i32 0, i32* %8, align 4
  %31 = call i32 (i8*, ...) @qprintf(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.1, i64 0, i64 0), i32 0)
  br label %32

32:                                               ; preds = %30, %27
  %33 = load %struct.TYPE_10__*, %struct.TYPE_10__** %5, align 8
  store %struct.TYPE_10__* %33, %struct.TYPE_10__** %6, align 8
  br label %34

34:                                               ; preds = %55, %32
  %35 = load %struct.TYPE_10__*, %struct.TYPE_10__** %6, align 8
  %36 = icmp ne %struct.TYPE_10__* %35, null
  br i1 %36, label %37, label %57

37:                                               ; preds = %34
  %38 = load %struct.TYPE_10__*, %struct.TYPE_10__** %6, align 8
  %39 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %38, i32 0, i32 0
  %40 = load %struct.TYPE_10__*, %struct.TYPE_10__** %39, align 8
  store %struct.TYPE_10__* %40, %struct.TYPE_10__** %7, align 8
  %41 = load %struct.TYPE_10__*, %struct.TYPE_10__** %6, align 8
  %42 = load i32*, i32** %3, align 8
  %43 = call i32 @Q1_BSPBrushToMapBrush(%struct.TYPE_10__* %41, i32* %42)
  %44 = load %struct.TYPE_10__*, %struct.TYPE_10__** %6, align 8
  %45 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %44, i32 0, i32 0
  store %struct.TYPE_10__* null, %struct.TYPE_10__** %45, align 8
  %46 = load %struct.TYPE_10__*, %struct.TYPE_10__** %6, align 8
  %47 = call i32 @FreeBrush(%struct.TYPE_10__* %46)
  %48 = load i32, i32* %4, align 4
  %49 = icmp ne i32 %48, 0
  br i1 %49, label %54, label %50

50:                                               ; preds = %37
  %51 = load i32, i32* %8, align 4
  %52 = add nsw i32 %51, 1
  store i32 %52, i32* %8, align 4
  %53 = call i32 (i8*, ...) @qprintf(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.2, i64 0, i64 0), i32 %52)
  br label %54

54:                                               ; preds = %50, %37
  br label %55

55:                                               ; preds = %54
  %56 = load %struct.TYPE_10__*, %struct.TYPE_10__** %7, align 8
  store %struct.TYPE_10__* %56, %struct.TYPE_10__** %6, align 8
  br label %34

57:                                               ; preds = %34
  %58 = load i32, i32* %4, align 4
  %59 = icmp ne i32 %58, 0
  br i1 %59, label %62, label %60

60:                                               ; preds = %57
  %61 = call i32 (i8*, ...) @qprintf(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.3, i64 0, i64 0))
  br label %62

62:                                               ; preds = %60, %57
  ret void
}

declare dso_local %struct.TYPE_10__* @Q1_CreateBrushesFromBSP(i32) #1

declare dso_local %struct.TYPE_10__* @Q1_TextureBrushes(%struct.TYPE_10__*, i32) #1

declare dso_local i32 @Q1_FixContentsTextures(%struct.TYPE_10__*) #1

declare dso_local %struct.TYPE_10__* @Q1_MergeBrushes(%struct.TYPE_10__*, i32) #1

declare dso_local i32 @qprintf(i8*, ...) #1

declare dso_local i32 @Q1_BSPBrushToMapBrush(%struct.TYPE_10__*, i32*) #1

declare dso_local i32 @FreeBrush(%struct.TYPE_10__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
